--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.5",
+    "node-fetch": "^2.6.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
